--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         </div>
     </article>
     <footer>
-        <p>&copyWebsite made by 
-             - svc.vargas03@gmail.com</p>
+        <p>&copyWebsite made by Juan Guillermo Pantoja
+             - jgpantoja13@gmail.com</p>
         <div class="finalList">
             <ul>
                 <li><img src="./images/facebook.png" alt=""></li>
