--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p>
                 This is a placeholder text. Replace it with your <br>
                 awesome call to action text. Develop stunning <br>
-                product website easily with this template.
+                product website easily with this templte.
             </p>
             <h4>- Marketing Page</h4>
             <ul>
