--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
     </article>
     <footer>
-        <p>&copyWebsite made by Juan Guillermo Pantoja
+        <p>&copyWebsite made by Juan G Pantoja <br>
              - jgpantoja13@gmail.com</p>
         <div class="finalList">
             <ul>
